Finalizado correção bug relatorio inscritos

--- a/WebContent/pages/inscritoCadastro.xhtml
+++ b/WebContent/pages/inscritoCadastro.xhtml
@@ -48,7 +48,7 @@
 				</p:inputText>
 
 				<p:outputLabel value="Data Nascimento:" />
-				<p:inputMask value="#{inscritoBean.inscritoCadastro.dataNascimento}"
+				<p:inputMask value="#{inscritoBean.inscritoCadastro.nascimento}"
 					id="dataNascimento" readonly="#{inscritoBean.acao == 'Excluir'}"
 					size="15" mask="99/99/9999" required="true"
 					requiredMessage="O campo Data de Nascimento é obrigatório." />
