--- a/WebContent/pages/inscritoPesquisa.xhtml
+++ b/WebContent/pages/inscritoPesquisa.xhtml
@@ -106,7 +106,7 @@
 
 					<h:outputText value="Data Nascimento:" />
 					<h:inputText size="15" disabled="true"
-						value="#{inscritoBean.inscritoCadastro.dataNascimento}">
+						value="#{inscritoBean.inscritoCadastro.nascimento}">
 						<f:convertDateTime pattern="dd/MM/yyyy"
 							timeZone="America/Sao_Paulo" />
 					</h:inputText>
