--- a/WebContent/pages/relatorioInscrito.xhtml
+++ b/WebContent/pages/relatorioInscrito.xhtml
@@ -30,7 +30,7 @@
 
 			<h:panelGrid columns="1" id="panelBeneficioCadastro">
 				<p:commandButton value="Gerar Relatório"
-					action="#{inscritoBean.geraRelatorio()}" ajax="false"
+					action="#{inscritoBean.geraRelatorioInscrito()}" ajax="false"
 					onclick="this.form.target='_blank'" />
 			</h:panelGrid>
 			<br />
