--- a/WebContent/pages/relatorioInscrito.xhtml
+++ b/WebContent/pages/relatorioInscrito.xhtml
@@ -29,7 +29,7 @@
 			<p:separator />
 
 			<h:panelGrid columns="1" id="panelBeneficioCadastro">
-				<p:commandButton value="Gerar Relatório"
+				<p:commandButton value="Gerar Relatório" icon="ui-icon-document"
 					action="#{inscritoBean.geraRelatorioInscrito()}" ajax="false"
 					onclick="this.form.target='_blank'" />
 			</h:panelGrid>
