--- a/WebContent/pages/relatorioAniversariantes.xhtml
+++ b/WebContent/pages/relatorioAniversariantes.xhtml
@@ -30,7 +30,7 @@
 
 			<h:panelGrid columns="3" id="panelAniversariantes">
 				<p:outputLabel value="Mês da pesquisa:" id="mesAniversario" />
-				<p:inputText size="10" value="#{inscritoBean.data}" />
+				<p:inputText size="10" value="#{inscritoBean.dataNiver}" />
 
 				<p:commandButton value="Gerar Relatório" icon="ui-icon-document"
 					action="#{inscritoBean.geraRelatorioAniversario()}" ajax="false"
