--- a/WebContent/pages/relatorioBeneficio.xhtml
+++ b/WebContent/pages/relatorioBeneficio.xhtml
@@ -30,17 +30,8 @@
 
 			<h:panelGrid columns="3" id="panelBeneficioCadastro">
 
-				<p:outputLabel for="som_nome" value="Nome:" />
-				<p:selectOneMenu id="som_nome" converter="inscritoConverter"
-					filterMatchMode="startsWith" filter="true"
-					value="#{beneficioBean.nome}" required="true"
-					requiredMessage="O campo nome é obrigatório.">
-					<f:selectItem itemLabel="SELECIONE UMA PESSOA..." itemValue="" />
-					<f:selectItems value="#{beneficioBean.listaInscritosFiltrados}"
-						var="inscrito" itemValue="#{inscrito}"
-						itemLabel="#{inscrito.nome}" />
-					<f:validateBean />
-				</p:selectOneMenu>
+				<p:outputLabel id="nome" value="Nome do Inscrito:" />
+				<p:inputText size="30" value="#{beneficioBean.nome}" />
 
 				<p:commandButton value="Gerar Relatório" icon="ui-icon-document"
 					action="#{beneficioBean.geraRelatorioAtividade()}" ajax="false"
