--- a/WebContent/pages/sobre.xhtml
+++ b/WebContent/pages/sobre.xhtml
@@ -25,52 +25,20 @@
 						</div>
 
 						<div style="width: 590px; text-align: center; padding: 10px;">
-							<h3>Versão 1.0</h3>
+							<h3>Versão 1.2</h3>
 
 							<p>Copyright &copy; 2018 DevSoftware. Todos os direitos
 								reservados. A DevSoftware desenvolve esse projeto com o intuito
 								de automatizar todo o processo de cadastrar atividades e
 								participações de crianças, jovens, adocelescentes e adultos nas
 								oficinas, cursos profissionalizantes do projeto Frente
-								Beneficente para Criança</p>
+								Beneficente para Criança.</p>
 						</div>
 
 					</p:layoutUnit>
 				</p:layout>
 			</h:panelGrid>
 		</p:fieldset>
-
-		<!--  
-		<p:dialog widgetVar="dialogLogin" closable="true" draggable="false"
-			resizable="false" modal="true" appendTo="@(body)" visible="true"
-			header="Sobre o Controle Construção - 2018">
-			<h:panelGrid columns="1" id="panelLoginUsuario">
-				<p:layout style="min-width: 620px; min-height: 500px;">
-					<p:layoutUnit position="center">
-						<div style="width: 590px; text-align: center;">
-							<h3>Controle Construção</h3>
-						</div>
-
-						<div style="width: 590px; postion: center; text-align: center;">
-							<p:graphicImage library="images" name="construtor.jpg"
-								width="500px"
-								style="text-align: center; border: 4px solid; border-radius: 30px;" />
-						</div>
-
-						<div style="width: 590px; text-align: center; padding: 10px;">
-							<h3>Versão 1.0</h3>
-
-							<p>Copyright &copy; 2018 DevSoftware. Todos os direitos
-								reservados. A DevSoftware desenvolve esse projeto com o intuito
-								de estabelecer novas fronteiras no ambito e nicho de controle de
-								estoque e vendas de materiais de construção.</p>
-						</div>
-
-					</p:layoutUnit>
-				</p:layout>
-			</h:panelGrid>
-		</p:dialog>
-		-->
 	</ui:define>
 </ui:composition>
 
