ajustes relatorio beneficio

--- a/WebContent/pages/beneficioCadastro.xhtml
+++ b/WebContent/pages/beneficioCadastro.xhtml
@@ -133,7 +133,7 @@
 					<f:selectItem itemLabel="20:00" itemValue="20:00" />
 				</p:selectOneMenu>
 
-				<p:outputLabel value="Data Inicio:" />
+				<p:outputLabel value="Data da Inscrição:" />
 				<p:calendar value="#{beneficioBean.beneficioCadastro.dataInicio}"
 					readonly="#{beneficioBean.acao == 'Excluir'}" size="15" mask="true"
 					pattern="dd/MM/yyyy" required="true"
