--- a/WebContent/pages/inscritoCadastro.xhtml
+++ b/WebContent/pages/inscritoCadastro.xhtml
@@ -125,15 +125,19 @@
 					<f:selectItem itemLabel="MANHÃ" itemValue="MANHÃ" />
 					<f:selectItem itemLabel="TARDE" itemValue="TARDE" />
 					<f:selectItem itemLabel="NOITE" itemValue="NOITE" />
+					<f:selectItem itemLabel="PERÍODO INTEGRAL" itemValue="PERÍODO INTEGRAL" />
 				</p:selectOneRadio>
 
 				<p:outputLabel for="serie" value="Série:" />
 				<p:selectOneMenu id="serie"
 					value="#{inscritoBean.inscritoCadastro.serie}">
 					<f:selectItem itemLabel="Selecione uma série" itemValue="" />
+					<f:selectItem itemLabel="CRECHE" itemValue="CRECHE" />
 					<f:selectItem itemLabel="INFANTIL I" itemValue="INFANTIL I" />
 					<f:selectItem itemLabel="INFANTIL II" itemValue="INFANTIL II" />
 					<f:selectItem itemLabel="INFANTIL III" itemValue="INFANTIL III" />
+					<f:selectItem itemLabel="INFANTIL IV" itemValue="INFANTIL IV" />
+					<f:selectItem itemLabel="INFANTIL V" itemValue="INFANTIL V" />
 					<f:selectItem itemLabel="1º ANO" itemValue="1º ANO" />
 					<f:selectItem itemLabel="2º ANO" itemValue="2º ANO" />
 					<f:selectItem itemLabel="3º ANO" itemValue="3º ANO" />
