--- a/WebContent/pages/inscritoPesquisa.xhtml
+++ b/WebContent/pages/inscritoPesquisa.xhtml
@@ -49,8 +49,9 @@
 				</p:column>
 
 				<p:column headerText="Nome" filterBy="#{inscrito.nome}"
-					style="text-align: center; text-transform: uppercase;">
-					<h:outputText value="#{inscrito.nome}" />
+					style="text-align: center;">
+					<h:outputText value="#{inscrito.nome}"
+						style="text-transform: uppercase;" />
 				</p:column>
 
 				<p:column headerText="Endereço" style="text-align: center;">
