--- a/WebContent/pages/manutencao.xhtml
+++ b/WebContent/pages/manutencao.xhtml
@@ -9,7 +9,7 @@
 <ui:composition template="/templates/modeloGeral.xhtml">
 
 	<ui:define name="conteudo">
-		<p:fieldset legend="Sobre o Controle Benefícios"
+		<p:fieldset legend="Manutenção"
 			style="width: 500px; position: absolute; top: 5%; left: 25%;">
 			<h:panelGrid columns="1">
 				<p:layout style="min-width: 650px; min-height: 500px;">
@@ -25,14 +25,8 @@
 						</div>
 
 						<div style="width: 590px; text-align: center; padding: 10px;">
-							<h3>Versão 1.3</h3>
+							<h3>Funcionalidade em desenvolvimento, entre em contato com o administrador.</h3>
 
-							<p>Copyright &copy; 2018 DevSoftware. Todos os direitos
-								reservados. A DevSoftware desenvolve esse projeto com o intuito
-								de automatizar todo o processo de cadastrar atividades e
-								participações de crianças, jovens, adocelescentes e adultos nas
-								oficinas, cursos profissionalizantes do projeto Frente
-								Beneficente para Criança.</p>
 						</div>
 
 					</p:layoutUnit>
