--- a/WebContent/pages/beneficioPesquisa.xhtml
+++ b/WebContent/pages/beneficioPesquisa.xhtml
@@ -64,7 +64,7 @@
 					<h:outputText value="#{beneficio.horarioInicio}" />
 				</p:column>
 
-				<p:column headerText="Data Início"
+				<p:column headerText="Data da Inscrição"
 					style="text-align: center; width:6%;">
 					<h:outputText value="#{beneficio.dataInicio}">
 						<f:convertDateTime pattern="dd/MM/yyyy"
