Finalizado geração de todos os relatórios jasper

--- a/WebContent/pages/manutencao.xhtml
+++ b/WebContent/pages/manutencao.xhtml
@@ -9,24 +9,29 @@
 <ui:composition template="/templates/modeloGeral.xhtml">
 
 	<ui:define name="conteudo">
-		<p:fieldset legend="Manutenção"
-			style="width: 500px; position: absolute; top: 5%; left: 25%;">
+		<p:fieldset legend="Funcionalidade em desenvolvimento"
+			style="width: 500px; position: absolute; top: 3%; left: 24%;">
 			<h:panelGrid columns="1">
-				<p:layout style="min-width: 650px; min-height: 500px;">
+				<p:layout style="min-width: 620px; min-height: 450px;">
 					<p:layoutUnit position="center">
 
 						<br />
 						<br />
 						<br />
 
-						<div style="width: 590px; postion: center; text-align: center;">
-							<p:graphicImage library="images" name="logo.png" width="300px"
-								style="text-align: center; border: 4px solid; border-radius: 30px;" />
+						<div style="width: 600px; postion: center; text-align: center;">
+							<p:graphicImage library="images" name="logo.png" width="250px"
+								style="text-align: center; border: 4px solid; border-radius: 40px;" />
 						</div>
 
-						<div style="width: 590px; text-align: center; padding: 10px;">
-							<h3>Funcionalidade em desenvolvimento, entre em contato com o administrador.</h3>
+						<br />
+						<br />
+						<br />
 
+						<div style="width: 600px; text-align: center; padding: 5px;">
+							<p style="text-align: center; width: 600px;">Página em
+								construção. Em breve funcionalidade estará ativa. Qualquer
+								dúvida consulte o administrador.</p>
 						</div>
 
 					</p:layoutUnit>
