--- a/WebContent/pages/sobre.xhtml
+++ b/WebContent/pages/sobre.xhtml
@@ -10,29 +10,29 @@
 
 	<ui:define name="conteudo">
 		<p:fieldset legend="Sobre o Controle Benefícios"
-			style="width: 500px; position: absolute; top: 5%; left: 25%;">
+			style="width: 500px; position: absolute; top: 3%; left: 24%;">
 			<h:panelGrid columns="1">
-				<p:layout style="min-width: 650px; min-height: 500px;">
+				<p:layout style="min-width: 620px; min-height: 450px;">
 					<p:layoutUnit position="center">
 
 						<br />
 						<br />
 						<br />
 
-						<div style="width: 590px; postion: center; text-align: center;">
-							<p:graphicImage library="images" name="logo.png" width="300px"
-								style="text-align: center; border: 4px solid; border-radius: 30px;" />
+						<div style="width: 600px; postion: center; text-align: center;">
+							<p:graphicImage library="images" name="logo.png" width="250px"
+								style="text-align: center; border: 4px solid; border-radius: 40px;" />
 						</div>
 
-						<div style="width: 590px; text-align: center; padding: 10px;">
-							<h3>Versão 1.3</h3>
+						<div style="width: 600px; text-align: center; padding: 5px;">
+							<h3>Versão 1.4</h3>
 
-							<p>Copyright &copy; 2018 DevSoftware. Todos os direitos
-								reservados. A DevSoftware desenvolve esse projeto com o intuito
-								de automatizar todo o processo de cadastrar atividades e
-								participações de crianças, jovens, adocelescentes e adultos nas
-								oficinas, cursos profissionalizantes do projeto Frente
-								Beneficente para Criança.</p>
+							<p style="text-align: center; width: 600px;">Copyright &copy; 2018
+								DevSoftware. Todos os direitos reservados. A DevSoftware
+								desenvolve esse projeto com o intuito de automatizar todo o
+								processo de cadastrar atividades e participações de crianças,
+								jovens, adocelescentes e adultos nas oficinas, cursos
+								profissionalizantes do projeto Frente Beneficente para Criança.</p>
 						</div>
 
 					</p:layoutUnit>
