Finalizado correções versões 1.4

--- a/WebContent/pages/gerarBackup.xhtml
+++ b/WebContent/pages/gerarBackup.xhtml
@@ -28,9 +28,9 @@
 
 			<p:separator />
 
-			<h:panelGrid columns="3" id="panelBeneficioCadastro">
+			<h:panelGrid columns="3" id="panelGerarBackup">
 				<p:outputLabel value="Data:" />
-				<p:inputMask value="" id="dataNascimento" size="15"
+				<p:inputMask value="" id="dataBackup" size="10"
 					mask="99/99/9999" required="true"
 					requiredMessage="O campo Data de geração do backup é obrigatório." />
 
