--- a/WebContent/pages/inscritoPesquisa.xhtml
+++ b/WebContent/pages/inscritoPesquisa.xhtml
@@ -71,13 +71,13 @@
 
 				<p:column headerText="Opção" style="text-align: center; width: 11%;">
 					<p:button icon="ui-icon-trash" title="Excluir"
-						outcome="/pages/inscritoCadastro.xhtml">
+						outcome="/pages/inscritoCadastro3.xhtml">
 						<f:param name="inscritoCodigo" value="#{inscrito.codigo}" />
 						<f:param name="inscritoAcao" value="Excluir" />
 					</p:button>
 
 					<p:button icon="ui-icon-pencil" title="Editar"
-						outcome="/pages/inscritoCadastro.xhtml">
+						outcome="/pages/inscritoCadastro3.xhtml">
 						<f:param name="inscritoCodigo" value="#{inscrito.codigo}" />
 						<f:param name="inscritoAcao" value="Editar" />
 					</p:button>
