Alteração no dominio inscrito para 13 tamanho docresponsavel

--- a/WebContent/pages/beneficioCadastro.xhtml
+++ b/WebContent/pages/beneficioCadastro.xhtml
@@ -71,6 +71,7 @@
 					<f:selectItem itemLabel="SEGUNDA/QUINTA" itemValue="SEGUNDA/QUINTA" />
 					<f:selectItem itemLabel="SEGUNDA/QUARTA" itemValue="SEGUNDA/QUARTA" />
 					<f:selectItem itemLabel="TERÇA/QUINTA" itemValue="TERÇA/QUINTA" />
+					<f:selectItem itemLabel="QUARTA/DOMINGO" itemValue="QUARTA/DOMINGO" />
 				</p:selectOneMenu>
 
 				<p:outputLabel for="horarioInicio" value="Horário Início:" />
